<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".RegistrationActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.sananda.androidmvvmroomlivedatarecyclerview.viewmodels.RegistrationViewModel" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout

            android:id="@+id/activityRegistration"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#cce46e">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="50dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="50dp"
                app:cardCornerRadius="7dp"
                app:cardElevation="22dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:orientation="vertical">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:cursorVisible="true"
                        android:gravity="center|left|bottom"
                        android:hint="@string/full_name"
                        android:inputType="textEmailAddress"
                        android:maxLength="50"
                        android:paddingBottom="10dp"
                        android:textSize="18sp" />
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#aeabab">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/etEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginTop="20dp"
                            android:cursorVisible="true"
                            android:gravity="center|left|bottom"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:maxLength="50"
                            android:paddingBottom="10dp"
                            android:textSize="18sp" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#aeabab"
                        app:passwordToggleEnabled="true">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/etPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginTop="20dp"
                            android:cursorVisible="true"
                            android:gravity="center|left|bottom"
                            android:inputType="textPassword"
                            android:hint="@string/password"
                            android:maxLength="50"
                            android:paddingBottom="10dp"
                            android:textSize="18sp" />

                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#aeabab"
                        app:passwordToggleEnabled="true">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/etConfrmPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginTop="20dp"
                            android:cursorVisible="true"
                            android:gravity="center|left|bottom"
                            android:inputType="textPassword"
                            android:hint="@string/confirm_password"
                            android:maxLength="50"
                            android:paddingBottom="10dp"
                            android:textSize="18sp" />

                    </android.support.design.widget.TextInputLayout>
                    <Button
                        android:id="@+id/btnReg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="15dp"
                        android:background="#b75d7a"
                        android:onClick="@{() -> viewModel.onRegistrationClicked()}"
                        android:padding="10dp"
                        android:text="@string/sign_up"
                        android:textSize="18dp" />
                    <Button
                        android:id="@+id/btnLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="#7384b7"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:onClick="@{() -> viewModel.onLoginClicked()}"
                        android:padding="10dp"
                        android:text="@string/login"
                        android:textSize="18dp" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

        </RelativeLayout>

    </FrameLayout>

</layout>